--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -23,7 +23,7 @@ $font-display: 'Josefin Sans', sans-serif;
 }
 
 html {
-  font-style: 62.5%; // 1rem = 10px 10/16 = 62.5%
+  font-size: 62.5%; // 1rem = 10px 10/16 = 62.5%
   box-sizing: border-box;
 }
 
@@ -32,4 +32,12 @@ body {
   font-weight: 300;
   line-height: 1.6;
   color: $color-grey-dark-2;
+}
+
+.container {
+  display: grid;
+  grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) 
+                         [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
+                         [center-end] minmax(6rem, 1fr) [full-end];
 }
