--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -1,12 +1,46 @@
 .story {
 
   &__pictures {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    align-items: center;
     background-color: $color-primary;
+    background-image: linear-gradient(to bottom, rgba($color-primary,0.5), rgba($color-primary,0.5)), url('../img/back.jpg');
     grid-column: full-start / col-end 4;
   }
 
+  &__img--1 {
+    width: 100%;
+    grid-column: 2 / 6;
+    grid-row: 2 / 6;
+    box-shadow: 0 2rem 5rem rgba(#000, 0.1);
+  }
+  
+  &__img--2 {
+    width: 115%;
+    grid-column: 4 / 7;
+    grid-row: 4 / 6;
+    z-index: 20;
+    box-shadow: 0 2rem 5rem rgba(#000, 0.2);
+  }
+
   &__content {
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: flex-start;
+    display: grid;
+    align-content: center;
+    justify-items: start;
+    padding: 6rem 8vw;
     background-color: $color-grey-light-1;
     grid-column: col-start 5 / full-end;
+  }
+
+  &__text {
+    font-size: 1.5rem;
+    font-style: italic;
+    margin-bottom: 4rem;
   }
 }
