--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,4 +1,45 @@
 .footer {
   background-color: $color-secondary;
   grid-column: full-start / full-end;
+  padding: 8rem;
 }
+
+.nav {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  grid-gap: 2rem;
+  align-items: center;
+  list-style: none;
+
+  &__item {
+
+  }
+
+  &__link:link,
+  &__link:visited {
+    display: block;
+    font-family: $font-display;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    text-align: center;
+    text-decoration: none;
+    padding: 1.5rem;
+    color: #fff;
+    transition: all 0.2s;
+  }
+  
+  &__link:hover,
+  &__link:active {
+    background-color: rgba(#fff, 0.05);
+    transform: translateY(-3px);
+  }
+}
+
+.copyright {
+  font-size: 1.4rem;
+  text-align: center;
+  margin: 6rem auto 0 auto;
+  width: 70%;
+  color: $color-grey-light-2;
+}
+
