--- a/css/style.css
+++ b/css/style.css
@@ -71,9 +71,29 @@ body {
   margin-bottom: 8rem; }
 
 .sidebar {
+  display: flex;
+  justify-content: center;
   background-color: #c69963;
   grid-column: sidebar-start / sidebar-end;
   grid-row: 1 / -1; }
+
+.nav-btn {
+  height: 2px;
+  width: 4.5rem;
+  border: none;
+  border-radius: 0;
+  background-color: #fff;
+  margin-top: 4rem; }
+  .nav-btn::before, .nav-btn::after {
+    content: '';
+    display: block;
+    height: 2px;
+    width: 4.5rem;
+    background-color: #fff; }
+  .nav-btn::before {
+    transform: translateY(-1.5rem); }
+  .nav-btn::after {
+    transform: translateY(1.3rem); }
 
 .header {
   background-color: #54483A;
