--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -1,5 +1,28 @@
 .sidebar {
+  display: flex;
+  justify-content: center;
   background-color: $color-primary;
   grid-column: sidebar-start / sidebar-end;
   grid-row: 1 / -1;
+}
+
+.nav-btn {
+  height: 2px;
+  width: 4.5rem;
+  border: none;
+  border-radius: 0;
+  background-color: #fff;
+  margin-top: 4rem;
+
+  &::before,
+  &::after {
+    content: '';
+    display: block;
+    height: 2px;
+    width: 4.5rem;
+    background-color: #fff;
+  }
+
+  &::before { transform: translateY(-1.5rem); }
+  &::after { transform: translateY(1.3rem); }
 }
