--- a/css/style.css
+++ b/css/style.css
@@ -143,8 +143,28 @@ body {
           opacity: 0.5; } }
 
 .realtors {
+  display: grid;
+  grid-row-gap: 2rem;
+  justify-items: center;
+  justify-content: center;
+  align-content: center;
+  padding: 3rem;
   background-color: #101d2c;
   grid-column: col-start 7 / full-end; }
+  .realtors__list {
+    display: grid;
+    grid-template-columns: min-content max-content;
+    grid-column-gap: 2rem;
+    grid-row-gap: 5vh;
+    align-items: center; }
+  .realtors__img {
+    display: block;
+    width: 7rem;
+    border-radius: 50%; }
+  .realtors__sold {
+    text-transform: uppercase;
+    color: #aaa;
+    margin-top: -3px; }
 
 .features {
   display: grid;
