--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -1,4 +1,31 @@
 .realtors {
+  display: grid;
+  grid-row-gap: 2rem;
+  justify-items: center;
+  justify-content: center;
+  align-content: center;
+  padding: 3rem;
   background-color: $color-secondary;
   grid-column: col-start 7 / full-end;
+
+  &__list {
+    display: grid;
+    grid-template-columns: min-content max-content;
+    grid-column-gap: 2rem;
+    grid-row-gap: 5vh;
+    align-items: center;
+  }
+  
+  &__img {
+    display: block;
+    width: 7rem;
+    border-radius: 50%;
+  }
+
+  &__sold {
+    text-transform: uppercase;
+    color: $color-grey-light-2;
+    margin-top: -3px;
+
+  }
 }
