--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@
 html {
   font-size: 62.5%;
   box-sizing: border-box; }
+  @media only screen and (max-width: 75em) {
+    html {
+      font-size: 50%; } }
+  @media only screen and (max-width: 20em) {
+    html {
+      font-size: 45%; } }
 
 body {
   font-family: "Nunito", sans-serif;
@@ -19,6 +25,13 @@ body {
   display: grid;
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
   grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
+  @media only screen and (max-width: 62.5em) {
+    .container {
+      grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+      grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; } }
+  @media only screen and (max-width: 50em) {
+    .container {
+      grid-template-rows: 6rem calc(100vh - 6rem); } }
 
 .heading-1, .heading-2, .heading-3, .heading-4 {
   font-family: "Josefin Sans", sans-serif;
@@ -81,6 +94,12 @@ body {
   background-color: #c69963;
   grid-column: sidebar-start / sidebar-end;
   grid-row: 1 / -1; }
+  @media only screen and (max-width: 62.5em) {
+    .sidebar {
+      justify-content: flex-end;
+      align-items: center;
+      grid-column: 1 / -1;
+      grid-row: 1 / 2; } }
 
 .nav-btn {
   height: 2px;
@@ -99,11 +118,19 @@ body {
     transform: translateY(-1.5rem); }
   .nav-btn::after {
     transform: translateY(1.3rem); }
+  @media only screen and (max-width: 62.5em) {
+    .nav-btn {
+      margin-top: 0;
+      margin-right: 3rem; }
+      .nav-btn::before {
+        transform: translateY(-1.2rem); }
+      .nav-btn::after {
+        transform: translateY(1rem); } }
 
 .header {
   display: grid;
-  grid-template-columns: max-content;
-  grid-template-rows: 1fr min-content 6rem 1fr;
+  grid-template-columns: minmax(min-content, max-content);
+  grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
   grid-row-gap: 1.5rem;
   justify-content: center;
   padding: 8rem;
@@ -113,6 +140,12 @@ body {
   background-position: center;
   background-color: #54483A;
   grid-column: full-start / col-end 6; }
+  @media only screen and (max-width: 50em) {
+    .header {
+      grid-column: full-start / full-end; } }
+  @media only screen and (max-width: 37.5em) {
+    .header {
+      padding: 5rem; } }
   .header__logo {
     height: 3rem;
     justify-self: center; }
@@ -134,9 +167,11 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-column-gap: 3rem;
-    justify-items: center; }
+    justify-items: center;
+    align-items: center; }
     .header__seenon-logos img {
-      height: 2.5rem;
+      max-height: 2.5rem;
+      max-width: 100%;
       filter: brightness(70%); }
       @supports not (filter: brightness(0)) {
         .header__seenon-logos img {
@@ -151,12 +186,21 @@ body {
   padding: 3rem;
   background-color: #101d2c;
   grid-column: col-start 7 / full-end; }
+  @media only screen and (max-width: 50em) {
+    .realtors {
+      grid-column: full-start / full-end; } }
   .realtors__list {
     display: grid;
     grid-template-columns: min-content max-content;
     grid-column-gap: 2rem;
     grid-row-gap: 5vh;
     align-items: center; }
+    @media only screen and (max-width: 50em) {
+      .realtors__list {
+        grid-template-columns: repeat(3, min-content max-content); } }
+    @media only screen and (max-width: 37.5em) {
+      .realtors__list {
+        grid-template-columns: min-content max-content; } }
   .realtors__img {
     display: block;
     width: 7rem;
@@ -178,6 +222,9 @@ body {
   /*align-items: start;*/
   /* features section placement in site layout */
   grid-column: center-start / center-end; }
+  @media only screen and (max-width: 37.5em) {
+    .features {
+      margin: 7rem 0; } }
 
 .feature {
   display: grid;
@@ -201,13 +248,22 @@ body {
   align-items: center;
   background-color: #c69963;
   background-image: linear-gradient(to bottom, rgba(198, 153, 99, 0.5), rgba(198, 153, 99, 0.5)), url("../img/back.jpg");
+  background-size: cover;
   grid-column: full-start / col-end 4; }
+  @media only screen and (max-width: 50em) {
+    .story__pictures {
+      grid-column: full-start / full-end;
+      padding: 3rem; } }
 
 .story__img--1 {
   width: 100%;
   grid-column: 2 / 6;
   grid-row: 2 / 6;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1); }
+  @media only screen and (max-width: 50em) {
+    .story__img--1 {
+      grid-column: 1 / 5;
+      grid-row: 1 / -1; } }
 
 .story__img--2 {
   width: 115%;
@@ -215,6 +271,10 @@ body {
   grid-row: 4 / 6;
   z-index: 20;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2); }
+  @media only screen and (max-width: 50em) {
+    .story__img--2 {
+      grid-row: 1 / -1;
+      width: 100%; } }
 
 .story__content {
   display: grid;
@@ -223,6 +283,10 @@ body {
   padding: 6rem 8vw;
   background-color: #f9f7f6;
   grid-column: col-start 5 / full-end; }
+  @media only screen and (max-width: 50em) {
+    .story__content {
+      grid-column: full-start / full-end;
+      grid-row: 5 / 6; } }
 
 .story__text {
   font-size: 1.5rem;
@@ -235,6 +299,9 @@ body {
   grid-gap: 7rem;
   margin: 15rem 0;
   grid-column: center-start / center-end; }
+  @media only screen and (max-width: 37.5em) {
+    .homes {
+      margin: 7rem 0; } }
 
 .home {
   display: grid;
@@ -345,6 +412,9 @@ body {
   background-color: #101d2c;
   grid-column: full-start / full-end;
   padding: 8rem; }
+  @media only screen and (max-width: 37.5em) {
+    .footer {
+      padding: 4rem; } }
 
 .nav {
   display: grid;
