--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -11,6 +11,10 @@
 
   /* features section placement in site layout */
   grid-column: center-start / center-end;
+
+  @media only screen and (max-width: $bp-small) {
+    margin: 7rem 0;
+  }
 }
 
 .feature {
