--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -2,6 +2,10 @@
   background-color: $color-secondary;
   grid-column: full-start / full-end;
   padding: 8rem;
+
+  @media only screen and (max-width: $bp-small) {
+    padding: 4rem;
+  }
 }
 
 .nav {
@@ -10,10 +14,6 @@
   grid-gap: 2rem;
   align-items: center;
   list-style: none;
-
-  &__item {
-
-  }
 
   &__link:link,
   &__link:visited {
