--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,7 +1,7 @@
 .header {
   display: grid;
-  grid-template-columns: max-content;
-  grid-template-rows: 1fr min-content 6rem 1fr;
+  grid-template-columns: minmax(min-content, max-content);
+  grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
   grid-row-gap: 1.5rem;
   justify-content: center;
   padding: 8rem;
@@ -11,6 +11,14 @@
   background-position: center;
   background-color: $color-grey-dark-1;
   grid-column: full-start / col-end 6;
+
+  @media only screen and (max-width: $bp-medium) {
+    grid-column: full-start / full-end;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    padding: 5rem;
+  }
 
   &__logo {
     height: 3rem;
@@ -45,9 +53,11 @@
     grid-template-columns: repeat(4, 1fr);
     grid-column-gap: 3rem;
     justify-items: center;
+    align-items: center;
 
     img {
-      height: 2.5rem;
+      max-height: 2.5rem;
+      max-width: 100%;
       filter: brightness(70%);
 
       @supports not (filter: brightness(0)) {
